--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                 <a class="nav-link" href="#">Home</a>
               </li>
               <li class="nav-item ps-4">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#">Sobre Nós</a>
               </li>
               <li class="nav-item ps-4">
-                <a class="nav-link" href="#">Service</a>
+                <a class="nav-link" href="#">Serviços</a>
               </li>
               <li class="nav-item ps-4">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="#">Contato</a>
               </li>
              
             </ul>
@@ -54,8 +54,8 @@
                 <div class="col-md-6" id="titulo-menu">
                     <h1>First I wanted to be a veterinarian</h1>
                     <p class="mt-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet debitis laboriosam illum, aliquid velit dolores?</p>
-                    <button class="btn-menu">Contact Us</button>
-                    <button class="btn-menu ms-5" id="btn-ourservice" >Our Service</button>
+                    <button class="btn-menu">Contate-nos</button>
+                    <button class="btn-menu ms-5" id="btn-ourservice" >Nossos Serviços</button>
                 </div>
                 <div class="col-md-6" id="cachorro-menu">
                     <img class="ms-5" src="./Assets/Cachorro-menu.png" alt="">
